# plasmatic-cpp

./: .clang-tidy  CMakeLists.txt  Dockerfile  README.md
apps/: CMakeLists.txt
apps/plasmatic/: CMakeLists.txt  main.cpp
apps/plasmatic/config/: mechanical.json  thermal.json
config/compilers/: Clang.cmake
config/modules/: ConfigureLibrary.cmake
libs/: CMakeLists.txt
libs/LinearAlgebra/: CMakeLists.txt  Matrix.cpp  Vector.cpp
libs/LinearAlgebra/interface/LinearAlgebra/: LinearAlgebra.h  Matrix.h  Vector.h
libs/LinearAlgebra/tests/: CMakeLists.txt  main.cpp
libs/Mesh/: CMakeLists.txt  Element.cpp  Line.cpp  LineOrder2.cpp  Mesh.cpp  Tetrahedron.cpp  TetrahedronOrder2.cpp  Triangle.cpp  TriangleOrder2.cpp
libs/Mesh/interface/Mesh/: Coord.h  Element.h  Line.h  LineOrder2.h  Mesh.h  Tetrahedron.h  TetrahedronOrder2.h  Triangle.h  TriangleOrder2.h
libs/Mesh/tests/: CMakeLists.txt  LineOrder2.cpp  TetrahedronOrder2.cpp  TriangleOrder2.cpp  main.cpp
libs/Mesh/tests/assets/: mesh2d.geo  mesh2d.msh
libs/ProblemTypes/: CMakeLists.txt  HeatEq2D.cpp  HeatEq3D.cpp  Mechanical.cpp  ProblemTypes.cpp
libs/ProblemTypes/interface/ProblemTypes/: HeatEq2D.h  HeatEq3D.h  Mechanical.h  ProblemTypes.h
libs/ProblemTypes/tests/: CMakeLists.txt  main.cpp
libs/ProblemTypes/tests/assets/: mesh2d.geo  mesh2d.msh  mesh2d_quadratic.msh  mesh3d.geo  mesh3d.msh  mesh3d_quadratic.msh
libs/Utility/: CMakeLists.txt  ExecutablePath.cpp  Utility.cpp
libs/Utility/interface/Utility/: Abort.h  Check.h  ExecutablePath.h  Log.h  Types.h  Utility.h
libs/Utility/tests/: CMakeLists.txt  main.cpp
